# nanodet_mac

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
bash/: build_android.sh  build_mac.sh
build_android/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: common_function.hpp  nanodet_ncnn_functions.hpp
src/: nanodet.cpp  nanodet.h
